Leader changed investigation