@@ -9,6 +9,7 @@ echo $JAR_FILE
 
 java \
 -cp target/${JAR_FILE}:target/lib/* \
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED \
 -Daeron.archive.control.channel="aeron:udp?term-length=64k|endpoint=localhost:8010" \
 -Daeron.archive.control.stream.id="100" \
 -Daeron.archive.control.response.channel="aeron:udp?term-length=64k|endpoint=localhost:8020" \
@@ -19,7 +20,7 @@ java \
 -Daeron.cluster.members="0,localhost:20110,localhost:20220,localhost:20330,localhost:20440,localhost:8010|1,localhost:20111,localhost:20221,localhost:20331,localhost:20441,localhost:8011|2,localhost:20112,localhost:20222,localhost:20332,localhost:20442,localhost:8012" \
 -Daeron.cluster.ingress.channel="aeron:udp?term-length=64k" \
 -Daeron.cluster.log.channel="aeron:udp?term-length=256k|control-mode=manual|control=localhost:20550" \
--Daeron.dir=/dev/shm/aeron-n0 \
+-Daeron.dir=target/aeron-n0 \
 -Daeron.threading.mode=SHARED \
 -Daeron.archive.threading.mode=SHARED \
 -Dio.scalecube.acpoc.instanceId=n0 \
